--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="nav-header">
         <nav class="navbar navbar-expand-sm bg-warning navbar-dark">
-            <a class="navbar-brand" href="./index.php">崛博|Lib</a>
+            <a class="navbar-brand" href="./index.php"><img src="./Public/logo.jpg" height="40px" class="rounded-circle"> 崛博 | Lib</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
